# revcat-agent-advocate

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Dockerfile.supervisor  README.md  cli.py  firewall.yaml  fly.toml  index.html  plan.md  pyproject.toml  render.yaml  setup.sh
.docs_cache/: _rag_index.json  _search_index.json  index.txt
.docs_cache/pages/: api-v1.md  api-v2-beta.md  api-v2.md  customers__blocking-customers.md  customers__customer-attributes.md  customers__customer-info.md  customers__trusted-entitlements.md  customers__user-ids.md  dashboard-and-metrics__anomaly-detection-notifications.md  dashboard-and-metrics__audit-logs.md  dashboard-and-metrics__charts.md  dashboard-and-metrics__charts__active-customers-chart.md  dashboard-and-metrics__charts__active-subscriptions-chart.md  dashboard-and-metrics__charts__active-subscriptions-movement-chart.md  dashboard-and-metrics__charts__active-trials-chart.md  (+311 more)
advocate/: config.py  db.py  ledger.py  models.py
demo/: mock_api.py
tests/: conftest.py  eval_rag.py  rag_eval_results.json  test_api.py  test_bandit.py  test_browser.py  test_cli.py  test_competitive.py  test_config.py  test_content.py  test_db.py  test_demo_run.py  test_distribution.py  test_experiments.py  test_feedback.py  test_ingest.py  test_ledger.py  test_linter.py  test_mcp.py  test_metrics_sink.py  test_policy.py  test_prune_memory.py  test_rag.py  test_redteam.py  test_reliability.py  test_repro.py  test_search.py  test_signals.py  test_site_generator.py  test_supervisor.py  test_verifier.py
(+82 files in other folders)
